# picosdk-python-wrappers

./: .gitignore  LICENSE  pyproject.toml
src/picosdk/: __init__.py  ps3000a.py
test/exemples/anyScopeExamples/: block.py
test/exemples/picohrdlExamples/: picohrdlSingleModeExample.py
test/exemples/pl1000Examples/: pl1000SingleModeExample.py  pl1000StreamingModeExample.py
test/exemples/ps2000aExamples/: ps2000aSigGen.py
test/exemples/ps3000aExamples/: ps3000aBlockAdvancedTriggerExample.py  ps3000aBlockExample.py
test/exemples/ps4000aExamples/: ps4000aRapidBlockExample.py  ps4000aSigGen.py
test/exemples/ps5000aExamples/: ps5000aSigGen.py
test/exemples/ps6000Examples/: ps6000GetInfoExample.py
test/exemples/ps6000aExamples/: ps6000aBlockExample.py  ps6000aBlockMSOExample.py  ps6000aRapidBlockExample.py  ps6000aSigGenExample.py  ps6000aStreamingModeExample.py
test/exemples/usbdrdaqExamples/: usbdrdaqPhBlockExample.py  usbdrdaqScopeBlockExample.py
test/exemples/usbtc08Examples/: tc08SingleModeExample.py  tc08StreamingModeExample.py
