[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "picosdk"
authors = [{name = "Pico Technology Ltd"}, {name = "ymosteiro", email = "ymosteirovazquez@asulab.ch"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
